--- a/Scripts/Fig_04/Fig_04_ACDEFG.Rmd
+++ b/Scripts/Fig_04/Fig_04_ACDEFG.Rmd
@@ -6,11 +6,13 @@ output:
     fig_caption: true
 ---
 
+```{=html}
 <style type="text/css">
   body{
   font-size: 10pt;
 }
 </style>
+```
 
 # 1) Setup
 
@@ -63,18 +65,18 @@ In this section, we ensure that all necessary packages are installed.
 ```{r}
 # Ensure BiocManager is available for installation of Bioconductor packages
 if (!requireNamespace("BiocManager", quietly = TRUE)) install.packages("BiocManager")
-#BiocManager::install(version = "3.18")
+BiocManager::install(version = "3.18", ask = FALSE)
 
 # Define a list of required packages used in this script
 packages_required <- c("coin", "randomForest", "dplyr", "circlize", "ComplexHeatmap", 
-                       "dendextend", "ggrepel", "ggplot2", "rstatix",
+                       "dendextend", "ggrepel", "ggplot2", "rstatix", "tidyverse",
                        "unikn", "RColorBrewer", "yarrr", "scales", "ggsci")
 
 # Identify any required packages that are not installed
 packages_uninstalled <- packages_required[!(packages_required %in% installed.packages()[,"Package"])]
 
 # Install any uninstalled packages
-if(length(packages_uninstalled)) BiocManager::install(packages_uninstalled)
+if(length(packages_uninstalled)) BiocManager::install(packages_uninstalled, ask = FALSE)
 ```
 
 ## - Loading packages
@@ -85,6 +87,7 @@ Here, we load the necessary packages for our analysis.
 library(coin, quietly = TRUE)
 library(rstatix, quietly = TRUE)
 library(randomForest, quietly = TRUE)
+library(tidyverse, quietly = TRUE)
 library(dplyr, quietly = TRUE)
 library(circlize, quietly = TRUE)
 library(ComplexHeatmap, quietly = TRUE)
@@ -151,45 +154,45 @@ Immunophenotype_data <- Immunophenotype_data[setdiff(rownames(Immunophenotype_da
 
 ## - Heatmap plotting
 
-```{r echo=FALSE, fig.align='center', fig.cap='Figure 4A. Random Forest multiparametric data integration identifies two core BP-CMML subtypes distinguished by blast maturation status', fig.height=4.33071, fig.pos='H', fig.width=7.87402}
+Here we create a clustered heatmap of flow cytometry data, and save it as a PNG file.
 
+```{r echo=TRUE, fig.align='center', fig.cap='Figure 4A', fig.pos='H', fig.height=4.33071, fig.width=7.87402}
+# Convert the selected columns of the Immunophenotype_data dataframe to a matrix
 flow_data_mat <- as.matrix(Immunophenotype_data[,c('SSCA','CD45','CD34','CD38',
-                                 'CD117','CD135','CD33','CD13',
-                                 'CD45RA','CD123','CD56')])
+                                                   'CD117','CD135','CD33','CD13',
+                                                   'CD45RA','CD123','CD56')])
 
-flow_data_mat
-
+# Create a dataframe that classifies each column as either a 'Generic flow parameter' or a 'Cluster of differentiation'
 identity_markers <- data.frame(row.names = colnames(flow_data_mat))
 identity_markers[,'Class'] <- 'Cluster of differentiation'
 identity_markers['SSCA','Class'] <- 'Generic flow parameter'
-
 identity_markers$Class <- factor(identity_markers$Class, levels = c('Generic flow parameter', 'Cluster of differentiation'))
 
+# Normalize the data to a range of 0 to 1
 normalized = (flow_data_mat-min(flow_data_mat))/(max(flow_data_mat)-min(flow_data_mat))
 
+# Scale the normalized data (mean of 0 and standard deviation of 1) and transpose it
 scaled_flow_data_mat <- t(scale(as.matrix(normalized)))
 
-
+# Define a sequence of break values for the heatmap color scale
 breaks_val <- seq(from = -2, to = 2, length.out = 14)
+
+# Create a color palette for the heatmap
 col_heatmap_guide <- colorRamp2(breaks = breaks_val,colors = rev(c("#67000D",brew_mix)))
 
+# Set a seed for reproducibility
 set.seed(123)
 
+# Create a row annotation for the heatmap, which will display a density plot for each row of data
 row_anno = ComplexHeatmap::rowAnnotation(Distribution = anno_density(scaled_flow_data_mat, joyplot_scale = 1, 
-    gp = gpar(fill = "#CCCCCC80")))
+                                                                     gp = gpar(fill = "#CCCCCC80")))
 
-
-
-flow_heatmap <- Heatmap(scaled_flow_data_mat, name = 'Scaled\nMFI', col = col_heatmap_guide,
-                        row_split = identity_markers$Class, left_annotation = row_anno, border = T, 
-                        cluster_columns = F, cluster_rows = F, row_title_gp = gpar(col='white'), rect_gp = gpar(col = "white", lwd = 3))
-
-flow_heatmap
-
+# Set the padding for the column and row annotations
 ht_opt$COLUMN_ANNO_PADDING = unit(0.4, "cm")
 ht_opt$ROW_ANNO_PADDING = unit(0.4, "cm")
 
-flow_heatmap_with_clustering <- Heatmap(scaled_flow_data_mat, 
+# Create a heatmap
+flow_heatmap <- Heatmap(scaled_flow_data_mat, 
                                         name = 'Scaled\nMFI', 
                                         col = col_heatmap_guide,
                                         border = T, 
@@ -200,17 +203,20 @@ flow_heatmap_with_clustering <- Heatmap(scaled_flow_data_mat,
                                         row_names_gp = gpar(fontface = "bold"), 
                                         rect_gp = gpar(col = "black", lwd = 0.05), 
                                         heatmap_legend_param = list(
-                                      legend_direction = "horizontal", 
-                                      legend_width = unit(5, "cm")), 
-                                      row_names_side = 'left')
+                                          legend_direction = "horizontal", 
+                                          legend_width = unit(5, "cm")), 
+                                        row_names_side = 'left')
 
-draw(flow_heatmap_with_clustering)
+# Draw the heatmap
+draw(flow_heatmap, heatmap_legend_side = "bottom", annotation_legend_side = "bottom")
 
+# Save the heatmap as a PNG file
 png(filename = paste(figures_folder, '/Fig_04/Panel_A.png', sep = ''), units = 'cm', width = 20, height = 11, res = 300)
 
-draw(flow_heatmap_with_clustering, heatmap_legend_side = "bottom", 
-     annotation_legend_side = "bottom")
+# Draw the heatmap and its legends again, this time with the legends at the bottom of the plot
+draw(flow_heatmap, heatmap_legend_side = "bottom", annotation_legend_side = "bottom")
 
+# Shut down the graphics device
 invisible(dev.off())
 ```
 
@@ -226,15 +232,25 @@ RF.metadata <- read.csv(paste(data_folder, '/RandomForest/RF_input_data.csv', se
 
 ### - Assigning rownames
 
+This code first converts the 'Patient.ID' column of the RF.metadata dataframe to a factor. It then sets the row names of the RF.metadata dataframe to the 'Patient.ID' column. Finally, it removes the 'Patient.ID' column from the RF.metadata dataframe.
+
 ```{r}
+# Convert the 'Patient.ID' column of the RF.metadata dataframe to a factor
 RF.metadata$Patient.ID <- as.factor(RF.metadata$Patient.ID)
+
+# Set the row names of the RF.metadata dataframe to the 'Patient.ID' column
 rownames(RF.metadata) <- RF.metadata$Patient.ID
+
+# Remove the 'Patient.ID' column from the RF.metadata dataframe
 RF.metadata$Patient.ID <- NULL
 ```
 
 ### - Converting data categories to factors or integers
 
+Here we convert multiple columns in the RF.metadata dataframe to factors. Factors are used represent categorical data and can be used for statistical modeling.
+
 ```{r}
+# Convert the specified columns of the RF.metadata dataframe to factors
 RF.metadata$Gender <- as.factor(RF.metadata$Gender)
 RF.metadata$Subtype.at.CMML <- as.factor(RF.metadata$Subtype.at.CMML)
 RF.metadata$ICC.classification <- as.factor(RF.metadata$ICC.classification)
@@ -279,41 +295,54 @@ RF.metadata$Cytogenetics..at.transformation. <- as.factor(RF.metadata$Cytogeneti
 
 ## - Generating RandomForest model
 
+This code first sets a seed for reproducibility. It then trains a random forest model on the RF.metadata dataframe, using 100,000 trees. The model is trained with proximity measures and variable importance measures. After training the model, the seed is reset. Finally, the trained model is saved to a .RDS file.
+
 ```{r}
+# Set the seed for reproducibility
 set.seed(123)
 
+# Define the number of trees to be used in the random forest
 nTree_iterations <- c(100000)
 
+# Train a random forest model on the RF.metadata dataframe
+# The proximity argument is set to TRUE to compute proximity measures for the observations
+# The ntree argument specifies the number of trees to grow in the forest
+# The importance argument is set to TRUE to compute variable importance measures
 model <- randomForest(RF.metadata,
                       proximity = TRUE,
                       ntree = nTree_iterations, 
                       importance = TRUE)
 
-# RF changes the seed once ran so it is better to reset the seed following 
-
+# Reset the seed after running the random forest, as it changes the seed
 set.seed(123)
 
+# Save the trained model to a .RDS file
 saveRDS(model, 
         file = paste(data_folder, '/RandomForest/Results/Model/RF_Classification_Model.RDS', sep = ''))
 ```
 
 ## - Analysis of RF model
 
-### - Evaluating GINI Importance : Panel C
+### - Evaluating GINI Importance
 
-Evaluation of feature importance according to RF model. Features importance were grouped in classes and illustrated via GraphPad (see under ***GraphPad/Fig_04/Panels_CEFG.pzfx***).
+This code first computes the Gini importance of each predictor in the model, sorts the importances in decreasing order, and converts the result to a data frame. It then adds a 'Feature_class' column to the data frame, indicating the type of each predictor. Features metrics were illustrated via GraphPad (see under ***GraphPad/Fig_04/Panels_CEFG.pzfx***).
 
 ```{r}
+# Compute the Gini importance of each predictor in the model, sort them in decreasing order, and convert the result to a data frame
 GINI <- suppressWarnings(data.frame(GINI_Index = sort(importance(model)[, "MeanDecreaseGini"], decreasing = TRUE)) %>% dplyr::add_rownames() %>% dplyr::rename(Predictor = 'rowname'))
 
+# Convert GINI to a data frame
 GINI <- as.data.frame(GINI)
 
+# Set the row names of GINI to the 'Predictor' column
 rownames(GINI) <- GINI$Predictor
 
+# Add a 'Feature_class' column to GINI, indicating the type of each predictor
 GINI[colnames(RF.metadata)[1:46],'Feature_class'] <- 'Clinical metadata'
 GINI[colnames(RF.metadata)[47:57],'Feature_class'] <- 'Cytometry data'
 GINI[colnames(RF.metadata)[58:177],'Feature_class'] <- 'Transcriptional data'
 
+# Write the GINI data frame to a .csv file
 write.table(x = GINI, 
             file = paste(data_folder, '/RandomForest/Results/Model/RF_Classification_Model_GINI_Importance.csv', sep = ''),
             quote = FALSE, row.names = F, col.names = TRUE, sep = ',')
@@ -321,60 +350,79 @@ write.table(x = GINI,
 
 ### - Extracting proximity matrix for distance computation and MDS similarity evaluation
 
-```{r}
+This script calculates a distance matrix from a Random Forest model's proximity matrix, performs multidimensional scaling (MDS) on the distance matrix, creates a data frame with the MDS values, and generates an MDS plot using ggplot2. The plot is labeled with the percentage of variance explained by each dimension.
+
+```{r echo=TRUE, fig.align='center', fig.pos='H', fig.height=8, fig.width=5}
+# Calculate distance matrix from Random Forest model's proximity matrix
 distance.matrix <- dist(1-model$proximity)
 
+# Perform multidimensional scaling (MDS) on the distance matrix
 mds.stuff <- cmdscale(distance.matrix, eig = TRUE, x.ret = TRUE)
+
+# Calculate the percentage of variance explained by each dimension
 mds.var.per <- round(mds.stuff$eig/sum(mds.stuff$eig)*100, 1)
+
+# Extract the MDS values
 mds.values <- mds.stuff$points
+
+# Create a data frame with the MDS values
 mds.data <- data.frame(Sample=rownames(mds.values),
                        X= mds.values[,1],
                        Y= mds.values[,2])
 
+# Generate an MDS plot using ggplot2
 ggplot(data = mds.data, aes(x = X, y = Y, label=Sample)) + 
   geom_text(aes(color=Sample)) +
   theme_bw() +
   xlab(paste("MDS1 - ", mds.var.per[1], "%", sep="")) +
   ylab(paste("MDS2 - ", mds.var.per[2], "%", sep="")) +
-  ggtitle(label = "MDS plot", subtitle = "(1 - Random Forest Proximities)") + theme(legend.position = 'bottom')
-
+  ggtitle(label = "MDS plot", subtitle = "(1 - Random Forest Proximities)") + 
+  theme(legend.position = 'bottom')
 ```
 
 ### - Clustering K = 2
 
 #### - Hierarchical clustering on distance matrix : Panel D
 
-```{r}
-png(filename = paste(figures_folder, '/Fig_04/Panel_D-1.png', sep = ''), units = "cm", width = 21, height = 10.5, res = 300)
+This script generates a hierarchical clustering dendrogram from a distance matrix, saves it as a PNG file, cuts the dendrogram into two clusters, annotates the clusters, and creates a scatter plot of the MDS values colored by cluster. It then saves the scatter plot as a PNG file, adds the cluster annotations to the metadata, and writes the updated metadata to a CSV file.
 
+```{r echo=TRUE, fig.align='center', fig.cap='Figure 4D', fig.pos='H', fig.height=4.133858, fig.width=8.26772}
+# Generate hierarchical clustering dendrogram
 dendro <- stats::hclust(distance.matrix, method = "ward.D2") %>% as.dendrogram %>% ladderize  %>% color_branches(k=2, col = c('#793F0B', '#0B544B')) %>% color_labels(k = 2, col = c('#793F0B', '#0B544B'))
 
+# Plot dendrogram
 par(lwd=3)
 plot(dendro, axes=F)
 
+# Save PNG
+png(filename = paste(figures_folder, '/Fig_04/Panel_D-1.png', sep = ''), units = "cm", width = 21, height = 10.5, res = 300)
+
+# Plot dendrogram
+par(lwd=3)
+plot(dendro, axes=F)
+
+# Close PNG device
 invisible(dev.off())
+```
 
-#
-
+```{r echo=TRUE, fig.align='center', fig.cap='Figure 4D', fig.pos='H', fig.height=5.51181, fig.width=5.51181}
+# Cut dendrogram into two clusters
 Hierchical_clusters_K2 <- sort(cutree(dendro, k=2))
 
+# Annotate clusters
 Hierarchical_clustering_K2 <- data.frame(row.names = rownames(RF.metadata))
-Hierarchical_clustering_K2$Patient.ID <- rownames(Hierarchical_clustering_K2)
-
+Hierarchical_clustering_K2$Patient.ID <- rownames(RF.metadata)
 for (ID in Hierarchical_clustering_K2$Patient.ID) {
-  
-Hierarchical_clustering_K2[ID,'Cluster'] <- Hierchical_clusters_K2[[ID]]
-
+  Hierarchical_clustering_K2[ID,'Cluster'] <- Hierchical_clusters_K2[[ID]]
 }
-
 Hierarchical_clustering_K2[Hierarchical_clustering_K2$Cluster == Hierarchical_clustering_K2['416', 'Cluster'],'Cluster_annotated'] <- 'C1'
 Hierarchical_clustering_K2[Hierarchical_clustering_K2$Cluster == Hierarchical_clustering_K2['55', 'Cluster'],'Cluster_annotated'] <- 'C2'
 
+# Create scatter plot of MDS values colored by cluster
 mds.data.Hierarchical_K2_clustered <- mds.data
-
 mds.data.Hierarchical_K2_clustered$Cluster <- Hierarchical_clustering_K2$Cluster_annotated
-
 cols <- c('C1' = '#793F0B', 'C2' = '#0B544B')
+
 plot.Hierarchical_clusters_K2 <- ggplot(data = mds.data.Hierarchical_K2_clustered, aes(x = X, y = Y, label=Sample)) + 
   geom_point(aes(color=Cluster, fill=Cluster), shape = 21, alpha = 0.8, size = 2.5) +
   theme_linedraw(base_line_size = 0.2) +
@@ -388,71 +436,65 @@ plot.Hierarchical_clusters_K2 <- ggplot(data = mds.data.Hierarchical_K2_clustere
             axis.title.x = element_text(family='Helvetica', size=12, face = 'bold', vjust = 0),
             axis.title.y = element_text(family='Helvetica', size=12, face = 'bold', vjust = +3))
 
+plot.Hierarchical_clusters_K2_labelled <- plot.Hierarchical_clusters_K2 + 
+  geom_label_repel(aes(label = Sample, color=Cluster), 
+                   box.padding = 0.65, point.padding = 0.1, 
+                   size = 2, segment.color = 'grey70', max.overlaps = 15)
 
-plot.Hierarchical_clusters_K2_labelled <- plot.Hierarchical_clusters_K2 + geom_label_repel(aes(label = Sample, color=Cluster),
-                  box.padding   = 0.65, 
-                  point.padding = 0.1, size = 2,
-                  segment.color = 'grey70', max.overlaps = 15)
-
+# Plotting the above chart
 print(plot.Hierarchical_clusters_K2_labelled)
 
+# Save scatter plot as PNG
 png(filename = paste(figures_folder, '/Fig_04/Panel_D-2.png', sep = ''), units = "cm", width = 14, height = 14, res = 300)
-
 print(plot.Hierarchical_clusters_K2_labelled)
-
 invisible(dev.off())
 
-#
-
+# Add cluster annotations to metadata
 RF.metadata.hierarchical_clustering_K2 <- RF.metadata
 RF.metadata.hierarchical_clustering_K2[Hierarchical_clustering_K2$Patient.ID,'RF_Cluster'] <- Hierarchical_clustering_K2$Cluster_annotated
 
-RF.metadata.hierarchical_clustering_K2 <- RF.metadata.hierarchical_clustering_K2 %>% add_column(.before = 'Gender', 'Patient.ID' = rownames(RF.metadata.hierarchical_clustering_K2))
+# Add the Patient.ID column back into the data frame
+RF.metadata.hierarchical_clustering_K2 <- RF.metadata.hierarchical_clustering_K2 %>% mutate(.before = 'Gender', 'Patient.ID' = rownames(RF.metadata.hierarchical_clustering_K2))
 
+# Write updated metadata to CSV
 write_csv(x = RF.metadata.hierarchical_clustering_K2, 
             file = paste(data_folder, '/RandomForest/Results/Clustering/K2/RF_K2_Clustered_Metadata.csv', sep = ''))
-
-RF.metadata.hierarchical_clustering_K2$Patient.ID <- NULL
 ```
 
-#### - Wilcox t-test unpaired - median comparisons : Panels EFG
+#### - Wilcox t-test unpaired - median comparisons : Panels CEFG
 
-Features were retrospectively compared in the identified groupings. Features were illustrated via GraphPad (see under ***GraphPad/Fig_04/Panels_CEFG.pzfx***).
+This script converts all variables in the metadata to numeric, splits the metadata into two groups based on the cluster annotations, performs a Wilcoxon test for each variable to compare the two groups, and writes the test results to a CSV file. Features were then illustrated via GraphPad (see under ***GraphPad/Fig_04/Panels_CEFG.pzfx***).
 
 ```{r}
+# Remove the Patient.ID column
+RF.metadata.hierarchical_clustering_K2$Patient.ID <- NULL
+
+# Convert all variables to numeric
 RF.metadata.hierarchical_clustering_K2_numerised <- RF.metadata.hierarchical_clustering_K2[1:length(colnames(RF.metadata.hierarchical_clustering_K2))]
-
-variable_to_compare <- c(colnames(RF.metadata.hierarchical_clustering_K2_numerised)[1:length(colnames(RF.metadata.hierarchical_clustering_K2))])
-
 for (variable in colnames(RF.metadata.hierarchical_clustering_K2_numerised)[1:length(colnames(RF.metadata.hierarchical_clustering_K2))-1]) {
-
-RF.metadata.hierarchical_clustering_K2_numerised[,variable] <- as.numeric(RF.metadata.hierarchical_clustering_K2_numerised[,variable])
-  
+  RF.metadata.hierarchical_clustering_K2_numerised[,variable] <- as.numeric(RF.metadata.hierarchical_clustering_K2_numerised[,variable])
 }
 
-
+# Split metadata into two groups based on cluster annotations
 Group_A <- RF.metadata.hierarchical_clustering_K2_numerised %>% dplyr::filter(RF_Cluster == 'C1')
 Group_B <- RF.metadata.hierarchical_clustering_K2_numerised %>% dplyr::filter(RF_Cluster == 'C2')
 
-
+# Perform Wilcoxon test for each variable
 wilcox_t_test_results <- data.frame(row.names = colnames(RF.metadata.hierarchical_clustering_K2_numerised)[1:length(colnames(RF.metadata.hierarchical_clustering_K2))-1])
-
 for (variable in colnames(RF.metadata.hierarchical_clustering_K2_numerised)[1:length(colnames(RF.metadata.hierarchical_clustering_K2))-1]) {
-
-p <- coin::wilcox_test(formula = get(variable) ~ as.factor(RF_Cluster), data=RF.metadata.hierarchical_clustering_K2_numerised, distribution = "exact")
-wilcox_t_test_results[variable,'pval'] <- coin::pvalue(p)
-wilcox_t_test_results[variable,'Median C1'] <- median(Group_A[,variable])
-wilcox_t_test_results[variable,'Median C2'] <- median(Group_B[,variable])
-wilcox_t_test_results[variable, paste('Min', 'C1', sep = ' ')] <- min(Group_A[,variable])
-wilcox_t_test_results[variable, paste('Min', 'C2', sep = ' ')] <- min(Group_B[,variable])
-wilcox_t_test_results[variable, paste('Max', 'C1', sep = ' ')] <- max(Group_A[,variable])
-wilcox_t_test_results[variable, paste('Max', 'C2', sep = ' ')] <- max(Group_B[,variable])
-wilcox_t_test_results[variable, paste('Std', 'C1', sep = ' ')] <- sd(Group_A[,variable])
-wilcox_t_test_results[variable, paste('Std', 'C2', sep = ' ')] <- sd(Group_B[,variable])
+  p <- coin::wilcox_test(formula = get(variable) ~ as.factor(RF_Cluster), data=RF.metadata.hierarchical_clustering_K2_numerised, distribution = "exact")
+  wilcox_t_test_results[variable,'pval'] <- coin::pvalue(p)
+  wilcox_t_test_results[variable,'Median C1'] <- median(Group_A[,variable])
+  wilcox_t_test_results[variable,'Median C2'] <- median(Group_B[,variable])
+  wilcox_t_test_results[variable, paste('Min', 'C1', sep = ' ')] <- min(Group_A[,variable])
+  wilcox_t_test_results[variable, paste('Min', 'C2', sep = ' ')] <- min(Group_B[,variable])
+  wilcox_t_test_results[variable, paste('Max', 'C1', sep = ' ')] <- max(Group_A[,variable])
+  wilcox_t_test_results[variable, paste('Max', 'C2', sep = ' ')] <- max(Group_B[,variable])
+  wilcox_t_test_results[variable, paste('Std', 'C1', sep = ' ')] <- sd(Group_A[,variable])
+  wilcox_t_test_results[variable, paste('Std', 'C2', sep = ' ')] <- sd(Group_B[,variable])
 }
 
-wilcox_t_test_results <- wilcox_t_test_results %>% arrange(pval)
-
+# Write test results to CSV
 write.csv(wilcox_t_test_results, 
           file = paste(data_folder, '/RandomForest/Results/Clustering/K2/RF_K2_Stats_Wilcox_t_test.csv', sep = ''),
           row.names = T, quote = F)
